2008-06-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed possible div by zero
	  exception.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Use the OnDestroyed event instead of
	  Dispose, since with the latest changes in gtk#, Dispose is not
	  called anymore when a widget is destroyed.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* XmlSyntaxMode.xml: Fix CDATA end tag.

2008-05-27 David Makovský <yakeen@sannyas-on.net>
 
	* Mono.TextEditor/DefaultEditActions.cs: parse double value with invariant culture (Patch by Jérémie Laval).

2008-05-26  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: handled possible nullref.

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SemanticRule.cs: fixed Bug 393118 - URL
	  is not underlined completely and indeed redirects to only the
	  domain

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 393037 - CTRL+F and writing
	  text produces NRE'

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed Bug 393411 - Pasted text
	  offset is wrong when there is a selection

2008-05-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 392655
	  - The 'stopateol' highlighting behaviour doesn't always work'.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 389561 - Regression:
	  Middle-click paste does not insert at cursor location'.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed 'Bug 385844 - XML syntax
	  highlighting is unreliable' & 'Bug 389352 - Regression: big comment
	  is not coloured'.

2008-05-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Optimized background buffer.
